Fixed modal overflow bug

--- a/prod/css/style.css
+++ b/prod/css/style.css
@@ -1,3 +1,6 @@
+html {
+  overflow-x: hidden; }
+
 body {
   font-family: 'Open Sans', sans-serif;
   color: #444;
